[tool.poetry]
name = "pyside-ui-backpack"
version = "1.0.8"
description = "Helper functions for PySide2 UI Widgets"
authors = ["Maximiliano Rocamora <maxirocamora@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/MaxRocamora/ps-ui-backpack"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.16"

[tool.poetry.group.dev.dependencies]
pyside6 = { version = "^6.8.1.1", python = ">=3.9,<3.15" }
pytest = "^8.3.5"
pytest-qt = "^4.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
